# Medical-chatbot

./: .gitignore  README.md  pyproject.toml  test_chat.py
backend/: auth.py  constants.py  data_loader.py  hybrid_rag_retrieval.py  llm.py  main.py  qdrant_store.py  schema.py  sql_rag_retrieval.py
frontend/: package-lock.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: ChatMessage.tsx  CollectionsSidebar.tsx  LoginForm.tsx  RoleBadge.tsx  SourcesAccordion.tsx
frontend/lib/: api.ts  auth.ts
qdrant_storage/: raft_state.json
qdrant_storage/collections/medical_docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/medical_docs/0/segments/223af2fb-59be-4187-a2b2-522f9aac9f26/: mutable_id_tracker.mappings
qdrant_storage/collections/medical_docs/0/segments/55aa1f07-0f39-4888-8198-771fdedc6234/: mutable_id_tracker.mappings
qdrant_storage/collections/medical_docs/0/segments/baef1b94-8080-41ac-b4be-8620bab5b30d/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/medical_docs/0/segments/c173099b-428f-4f90-8046-99c58664fa2d/: mutable_id_tracker.mappings
qdrant_storage/collections/medical_docs/0/segments/e5b3900b-316b-4f1c-8632-b73e09f25d59/: mutable_id_tracker.mappings
qdrant_storage/collections/medical_docs/0/segments/eabf54c0-7c9d-44c1-aae2-706959c5e85f/: mutable_id_tracker.mappings
