[project]
name = "medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "inngest>=0.5.18",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "unicorn>=2.1.4",
    "python-jose>=3.5.0",
    "fastembed>=0.8.0",
]
